--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,6 @@ django-colorfield==0.4.3
 django-compressor==2.4
 django-cors-headers==3.7.0
 django-debug-toolbar==3.4.0
-django-excel-response==2.0.5
 django-extensions==3.1.5
 django-filter==2.4.0
 django-imagekit==4.0.2
@@ -37,6 +36,7 @@ django-prometheus==2.1.0
 django-rename-app==0.1.3
 django-simple-history==3.0.0
 django-tinymce==2.8.0
+django-import-export==2.8.0
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.6.0
@@ -71,7 +71,6 @@ numpy==1.21.2
 oauthlib==3.1.1
 odfpy==1.4.1
 openapi-codec==1.3.2
-openpyxl==2.4.11
 packaging==21.3
 pandas==1.3.3
 parso==0.8.2
