--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ django-colorfield==0.4.3
 django-compressor==2.4
 django-cors-headers==3.7.0
 django-debug-toolbar==3.4.0
+django-dbbackup==3.3.0
 django-extensions==3.1.5
 django-filter==2.4.0
 django-imagekit==4.0.2
